--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,15 +14,15 @@
       <include src="build/img/sprite.svg"></include>
     </svg>
 
-    <header class="page-header">
-      <a class="page-header__logo header-logo" href="index.html">
-        <picture>
-          <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
-          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-          <img class="header-logo__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Mishka">
-        </picture>
-      </a>
+    <header class="page-header container">
       <nav class="main-nav main-nav--closed main-nav--nojs">
+        <a class="page-header__logo header-logo">
+          <picture>
+            <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="header-logo__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Mishka">
+          </picture>
+        </a>
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
@@ -61,7 +61,7 @@
       </nav>
     </header>
 
-    <main class="page-catalog">
+    <main class="page-catalog container">
 
       <h1 class="page-catalog__page-title page-title page-title--color">Каталог товаров</h1>
 
@@ -170,7 +170,7 @@
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer__wrapper">
+      <div class="page-footer__wrapper container">
         <a class="page-footer__logo footer-logo" href="index.html">
           <!--<img class="footer-logo__logo-image" src="img/logo-footer.svg" width="102" height="34" alt="Mishka">-->
           <svg class="footer-logo__logo-image" width="101.615px" height="34.056px"><use xlink:href="#svg-icon-logo-footer"></use></svg>
@@ -195,8 +195,7 @@
           </ul>
         </div>
         <div class="page-footer__copyright copyright">
-          <b class="copyright__text">Разработано</b>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">Разработано<span class="visually-hidden">HTML Academy</span>
             <svg width="26.943px" height="34.09px"><use xlink:href="#svg-icon-htmlacademy"></use></svg>
           </a>
         </div>
