--- a/source/form.html
+++ b/source/form.html
@@ -14,15 +14,15 @@
       <include src="build/img/sprite.svg"></include>
     </svg>
 
-    <header class="page-header">
-      <a class="page-header__logo header-logo" href="index.html">
-        <picture>
-          <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
-          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-          <img class="header-logo__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Mishka">
-        </picture>
-      </a>
+    <header class="page-header container">
       <nav class="main-nav main-nav--closed main-nav--nojs">
+        <a class="page-header__logo header-logo">
+          <picture>
+            <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="header-logo__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Mishka">
+          </picture>
+        </a>
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
@@ -69,6 +69,7 @@
         <h2 class="visually-hidden">Заказ</h2>-->
 
         <form class="form-order" method="get" action="https://echo.htmlacademy.ru">
+          <div class="container">
           <p class="form-order__desc">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
 
           <div class="form-order__fieldset type">
@@ -84,79 +85,86 @@
               </li>
             </ul>
           </div>
-
-          <div class="form-order__fieldset color">
-            <h2 class="form-order__legend color__title">Цвет</h2>
-            <ul class="color__list">
-              <li class="color__item">
-                <input class="color__input-checkbox visually-hidden" type="checkbox" id="white" name="white" checked>
-                <label class="form-order__label color__input-label" for="white">Белый</label>
-              </li>
-              <li class="color__item">
-                <input class="color__input-checkbox visually-hidden" type="checkbox" id="grey" name="grey" checked>
-                <label class="form-order__label color__input-label" for="grey">Серый</label>
-              </li>
-              <li class="color__item">
-                <input class="color__input-checkbox visually-hidden" type="checkbox" id="tiffany" name="tiffany">
-                <label class="form-order__label color__input-label" for="tiffany">«Тиффани»</label>
-              </li>
-              <li class="color__item">
-                <input class="color__input-checkbox visually-hidden" type="checkbox" id="black" name="black">
-                <label class="form-order__label color__input-label" for="black">Черный</label>
-              </li>
-              <li class="color__item">
-                <input class="color__input-checkbox visually-hidden" type="checkbox" id="pink" name="pink">
-                <label class="form-order__label color__input-label" for="pink">Розовый</label>
-              </li>
-              <li class="color__item">
-                <input class="color__input-checkbox  visually-hidden" type="checkbox" id="orange" name="orange">
-                <label class="form-order__label color__input-label" for="orange">Оранжевый</label>
-              </li>
-            </ul>
           </div>
 
-          <div class="form-order__fieldset personal">
-            <h2 class="form-order__legend personal__title">ФИО</h2>
-            <ul class="personal__list">
-              <li class="personal__item">
-                <label class="form-order__label personal__input-label" for="name">Имя:</label>
-                <input class="personal__input" type="text" id="name" placeholder="Введите ваше имя*">
-              </li>
-              <li class="personal__item">
-                <label class="form-order__label personal__input-label" for="surname">Фамилия:</label>
-                <input class="personal__input" type="text" id="surname" placeholder="Укажите фамилию*">
-              </li>
-              <li class="personal__item">
-                <label class="form-order__label personal__input-label" for="middle_name">Отчество:</label>
-                <input class="personal__input" type="text" id="middle_name" placeholder="Отчество, если желаете">
-              </li>
-            </ul>
-          </div>
-
-          <div class="form-order__wrapper-phone">
-            <div class="form-order__fieldset phone">
-              <h2 class="form-order__legend phone__title">Тел</h2>
-              <input class="phone__input" type="phone" id="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
-              <label class="phone__label" for="phone">
-                <svg width="24.829px" height="24.333px"><use xlink:href="#svg-icon-phone"></use></svg>
-              </label>
-            </div>
-
-            <div class="form-order__fieldset email">
-              <h2 class="form-order__legend email__title">E-mail</h2>
-              <input class="email__input" type="email" id="email" placeholder="Ваш Email*">
-              <label class="email__label" for="email">
-                <svg width="32px" height="32px"><use xlink:href="#svg-icon-mail"></use></svg>
-              </label>
+          <div class="form-order__fieldset form-order__fieldset--color">
+            <div class="color container">
+              <h2 class="form-order__legend color__title">Цвет</h2>
+              <ul class="color__list">
+                <li class="color__item">
+                  <input class="color__input-checkbox visually-hidden" type="checkbox" id="white" name="white" checked>
+                  <label class="form-order__label color__input-label" for="white">Белый</label>
+                </li>
+                <li class="color__item">
+                  <input class="color__input-checkbox visually-hidden" type="checkbox" id="grey" name="grey" checked>
+                  <label class="form-order__label color__input-label" for="grey">Серый</label>
+                </li>
+                <li class="color__item">
+                  <input class="color__input-checkbox visually-hidden" type="checkbox" id="tiffany" name="tiffany">
+                  <label class="form-order__label color__input-label" for="tiffany">«Тиффани»</label>
+                </li>
+                <li class="color__item">
+                  <input class="color__input-checkbox visually-hidden" type="checkbox" id="black" name="black">
+                  <label class="form-order__label color__input-label" for="black">Черный</label>
+                </li>
+                <li class="color__item">
+                  <input class="color__input-checkbox visually-hidden" type="checkbox" id="pink" name="pink">
+                  <label class="form-order__label color__input-label" for="pink">Розовый</label>
+                </li>
+                <li class="color__item">
+                  <input class="color__input-checkbox  visually-hidden" type="checkbox" id="orange" name="orange">
+                  <label class="form-order__label color__input-label" for="orange">Оранжевый</label>
+                </li>
+              </ul>
             </div>
           </div>
 
-          <div class="form-order__fieldset textarea">
-          <h2 class="form-order__legend textarea__title">Доп</h2>
-            <textarea class="textarea__field" cols="1" rows="1" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+          <div class="container">
+            <div class="form-order__fieldset personal">
+              <h2 class="form-order__legend personal__title">ФИО</h2>
+              <ul class="personal__list">
+                <li class="personal__item">
+                  <label class="form-order__label personal__input-label" for="name">Имя:</label>
+                  <input class="personal__input" type="text" id="name" placeholder="Введите ваше имя*">
+                </li>
+                <li class="personal__item">
+                  <label class="form-order__label personal__input-label" for="surname">Фамилия:</label>
+                  <input class="personal__input" type="text" id="surname" placeholder="Укажите фамилию*">
+                </li>
+                <li class="personal__item">
+                  <label class="form-order__label personal__input-label" for="middle_name">Отчество:</label>
+                  <input class="personal__input" type="text" id="middle_name" placeholder="Отчество, если желаете">
+                </li>
+              </ul>
+            </div>
           </div>
 
-          <div class="form-order-wrapper-btn">
+          <div class="form-order__wrapper-phone form-order__fieldset--color">
+            <div class="container">
+              <div class="form-order__fieldset phone">
+                <h2 class="form-order__legend phone__title">Тел</h2>
+                <input class="phone__input" type="phone" id="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
+                <label class="phone__label" for="phone">
+                  <svg width="24.829px" height="24.333px"><use xlink:href="#svg-icon-phone"></use></svg>
+                </label>
+              </div>
+
+              <div class="form-order__fieldset email">
+                <h2 class="form-order__legend email__title">E-mail</h2>
+                <input class="email__input" type="email" id="email" placeholder="Ваш Email*">
+                <label class="email__label" for="email">
+                  <svg width="32px" height="32px"><use xlink:href="#svg-icon-mail"></use></svg>
+                </label>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-order__fieldset textarea container">
+              <h2 class="form-order__legend textarea__title">Доп</h2>
+              <textarea class="textarea__field" cols="1" rows="1" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+          </div>
+
+          <div class="form-order-wrapper-btn container">
             <p class="form-order__text">*Поля обязательны для заполнения</p>
 
             <button type="submit" class="form-order__btn button button-submit">Отправить заказ</button>
@@ -167,7 +175,7 @@
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer__wrapper">
+      <div class="page-footer__wrapper container">
         <a class="page-footer__logo footer-logo" href="index.html">
           <!--<img class="footer-logo__logo-image" src="img/logo-footer.svg" width="102" height="34" alt="Mishka">-->
           <svg class="footer-logo__logo-image" width="101.615px" height="34.056px"><use xlink:href="#svg-icon-logo-footer"></use></svg>
@@ -192,8 +200,7 @@
           </ul>
         </div>
         <div class="page-footer__copyright copyright">
-          <b class="copyright__text">Разработано</b>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">Разработано<span class="visually-hidden">HTML Academy</span>
             <svg width="26.943px" height="34.09px"><use xlink:href="#svg-icon-htmlacademy"></use></svg>
           </a>
         </div>
