--- a/source/index.html
+++ b/source/index.html
@@ -14,15 +14,15 @@
       <include src="build/img/sprite.svg"></include>
     </svg>
 
-    <header class="page-header">
-      <a class="page-header__logo header-logo">
-        <picture>
-          <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
-          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-          <img class="header-logo__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Mishka">
-        </picture>
-      </a>
+    <header class="page-header container">
       <nav class="main-nav main-nav--closed main-nav--nojs">
+        <a class="page-header__logo header-logo">
+          <picture>
+            <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="header-logo__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Mishka">
+          </picture>
+        </a>
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
@@ -67,7 +67,7 @@
         <h1 class="page-main__page-title page-title page-title--index">Милые штуки ручной<br> работы для дома</h1>
 
         <section class="catalog-menu">
-        <div class="catalog-menu__wrapper">
+        <div class="catalog-menu__wrapper container">
           <h2 class="visually-hidden">Каталог</h2>
           <ul class="catalog-menu__list">
             <li class="catalog-menu__item catalog-menu__item--decoration">
@@ -85,7 +85,7 @@
       </section>
       </div>
 
-      <section class="popular">
+      <section class="popular container">
         <div class="popular__wrapper">
           <div class="popular__wrapper-title">
             <h2 class="popular__title">Вязаные корзинки</h2>
@@ -128,7 +128,7 @@
         </div>
       </section>
 
-      <section class="info">
+      <section class="info container">
         <div class="info__wrapper">
           <h2 class="info__title">Коротко о нас:</h2>
           <ul class="info__list">
@@ -154,7 +154,7 @@
         </div>
       </section>
 
-      <section class="reviews">
+      <section class="reviews container">
         <div class="reviews__wrapper slider">
           <h2 class="reviews__title">Отзывы</h2>
           <div class="reviews__list slider__list">
@@ -177,7 +177,7 @@
         <a class="reviews__write button" href="add_review.html">Написать</a>
       </section>
 
-      <section class="contact">
+      <section class="contact container">
         <div class="contact__wrapper">
           <h2 class="contact__title">Контакты</h2>
           <ul class="contact__list">
@@ -204,7 +204,7 @@
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer__wrapper">
+      <div class="page-footer__wrapper container">
         <a class="page-footer__logo footer-logo">
           <!--<img class="footer-logo__logo-image" src="img/logo-footer.svg" width="102" height="34" alt="Mishka">-->
           <svg class="footer-logo__logo-image" width="101.615px" height="34.056px"><use xlink:href="#svg-icon-logo-footer"></use></svg>
@@ -229,8 +229,7 @@
           </ul>
         </div>
         <div class="page-footer__copyright copyright">
-          <b class="copyright__text">Разработано</b>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">Разработано<span class="visually-hidden">HTML Academy</span>
             <svg width="26.943px" height="34.09px"><use xlink:href="#svg-icon-htmlacademy"></use></svg>
           </a>
         </div>
