--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,17 +15,19 @@
     </svg>
 
     <header class="page-header container">
-      <nav class="main-nav main-nav--closed main-nav--nojs">
-        <a class="page-header__logo header-logo" href="index.html">
-          <picture>
-            <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
-            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-            <img class="header-logo__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Mishka">
-          </picture>
-        </a>
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list site-list">
+      <nav class="main-nav">
+        <div class="main-nav__header">
+          <a class="page-header__logo header-logo" href="index.html">
+            <picture>
+              <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+              <img class="header-logo__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Mishka">
+            </picture>
+          </a>
+          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        </div>
+        <!--<div class="main-nav__wrapper">-->
+          <ul class="main-nav__list site-list main-nav--closed main-nav--nojs">
             <li class="site-list__item">
               <a>Каталог товаров</a>
             </li>
@@ -33,7 +35,7 @@
               <a href="form.html">Вязание на заказ</a>
             </li>
           </ul>
-          <ul class="main-nav__list user-list">
+          <ul class="main-nav__list user-list main-nav--closed main-nav--nojs">
             <li class="user-list__item">
               <a class="user-list__link user-list__search" href="search.html"><span>Поиск по сайту</span>
                 <svg width="17.6px" height="17.6px"><use xlink:href="#svg-icon-search"></use></svg>
@@ -57,7 +59,7 @@
             </li>
           </ul>
           <p class="main-nav__delivery">Бесплатная доставка по России</p>
-        </div>
+        <!--</div>-->
       </nav>
     </header>
 
