--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
     </svg>
 
     <header class="page-header container">
-      <nav class="main-nav main-nav--closed main-nav--nojs">
+      <nav class="main-nav">
         <div class="main-nav__header">
           <a class="page-header__logo header-logo">
             <picture>
@@ -27,7 +27,7 @@
           <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </div>
         <!--<div class="main-nav__wrapper">-->
-          <ul class="main-nav__list site-list">
+          <ul class="main-nav__list site-list main-nav--closed main-nav--nojs">
             <li class="site-list__item">
               <a href="catalog.html">Каталог товаров</a>
             </li>
@@ -35,7 +35,7 @@
               <a href="form.html">Вязание на заказ</a>
             </li>
           </ul>
-          <ul class="main-nav__list user-list">
+          <ul class="main-nav__list user-list main-nav--closed main-nav--nojs">
             <li class="user-list__item">
               <a class="user-list__link user-list__search" href="search.html"><span>Поиск по сайту</span>
                 <svg width="17.6px" height="17.6px"><use xlink:href="#svg-icon-search"></use></svg>
@@ -161,7 +161,7 @@
           <h2 class="reviews__title">Отзывы</h2>
           <div class="reviews__list slider__list">
             <blockquote class="reviews__item slider__item">
-              <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+              <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,<br> и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
               <cite class="reviews__author-name">Анастасия Красильникова</cite>
               <a class="reviews__author-link">@misssssiskras</a>
             </blockquote>
